--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
       uses: actions/setup-node@master
     - run: npm install
     - run: npm run build
-    - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json
+    - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json pm2.config.json
 
     # 发布 Release
     - name: Create Release
       id: create_release
       uses: actions/create-release@master
       env:
-        GITHUB_TOKEN: ${{ secrets.NUXT }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
@@ -37,7 +37,7 @@ jobs:
       id: upload-release-asset
       uses: actions/upload-release-asset@master
       env:
-        GITHUB_TOKEN: ${{ secrets.NUXT }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./release.tgz
@@ -57,4 +57,4 @@ jobs:
           wget https://github.com/FairyUmaru/nuxt-demo/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           npm install --production
-          pm2 reload pm2.config.js
+          pm2 reload pm2.config.json
